<resources>
    <string name="app_name">Enter Your App Name</string>
    <string name="facebook_app_id">874383896560753</string>
    <string name="fb_login_protocol_scheme">fb874383896560753</string>
    <string name="count_clips" formatted="false">%s clips</string>
    <string name="image">Image</string>
    <string name="whaitis_rcoin">1.When you receive gifts , like a Lamborghini or Castle, you immediately earn the same amount of Coins as the gift\'s price in the Gift Store.\n\n2.You can convert Coins to both diamonds and cash.\n\n3.Coins balance Available+Withdrawing\n</string>
    <string name="bio">𝐋𝐢𝐟𝐞 𝐝𝐨𝐞𝐬𝐧’𝐭 𝐚𝐥𝐰𝐚𝐲𝐬 𝐠𝐢𝐯𝐞 𝐮 𝐚 𝐬𝐞𝐜𝐨𝐧𝐝 𝐜𝐡𝐚𝐧𝐜𝐞🤗💞💙 𝐔 𝐧𝐞𝐯𝐞𝐫 𝐠𝐞𝐭 𝐚 𝐬𝐞𝐜𝐨𝐧𝐝 𝐜𝐡𝐚𝐧𝐜𝐞 𝐭𝐨 𝐜𝐫𝐞𝐚𝐭𝐞 𝐭𝐡𝐞 𝐟𝐢𝐫𝐬𝐭 𝐢𝐦𝐩𝐫𝐞𝐬𝐬𝐢𝐨𝐧😊💛💚💜 𝐒𝐨 𝐦𝐚𝐤𝐞 𝐮𝐫 𝐟𝐢𝐫𝐬𝐭 𝐜𝐡𝐚𝐧𝐜𝐞 𝐜𝐨𝐮𝐧𝐭☺️💝💖❤️</string>
    <string name="dummyname">@Mia Malkova</string>
    <string name="timer_hint">To cancel timer before it starts, click here.</string>
    <string name="mmss">00:00</string>
    <string name="sound_hint">Click to choose a song.</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="back_online">Back Online</string>
    <string name="add_a_comment">Add a Comment...</string>
    <string name="in_this_apk_nall_data_are_only_for_demo_purpose">In this APK,\nAll data are only for Demo Purpose.</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="abc">abc</string>
    <string name="india">India</string>
    <string name="mute_mic">Mute mic</string>
    <string name="kick_out">Kick out</string>
    <string name="male">Male</string>
    <string name="rtc_stats_format">Downstream Bitrate: %.2f kbps%nDownstream Loss Rate: %.2f%% %nUpstream Bitrate: %.2f kbps%nUpstream Loss Rate: %.2f%%</string>
    <string name="cancel">Cancel</string>
    <string name="sure">Sure</string>
    <string name="take_the_mic">Take the Mic</string>
    <string name="give_the_mic">Give the Mic</string>
    <string name="lock_the_mic">Lock the Mic</string>
    <string name="mute_the_mic">Mute the Mic</string>
    <string name="theme">Theme</string>
    <string name="notification_preview_description">This will take just a few moments.</string>
    <string name="notification_preview_title">Preparing for upload…</string>
    <string name="notification_upload_description">Just a few moments before it goes on air.</string>
    <string name="notification_upload_title">Uploading Relite…</string>
    <string name="notification_upload_failed_description">The video has to been saved to drafts.</string>
    <string name="notification_upload_failed_title">Failed to upload.</string>
    <string name="notification_watermark_description">This will take a while, we\'ll notify you when done.</string>
    <string name="notification_watermark_title">Optimizing clip…</string>
    <string name="audio_from_clip">Custom audio from clip.</string>
    <string name="browse_file_title">Browse file</string>
    <string name="cancel_button">cancel</string>
    <string name="message_song_change">You cannot change song after recording has started.</string>
    <string name="message_song_select">You cannot select song after recording has started.</string>
    <string name="message_trim_too_long" formatted="false">Please select no more that %d seconds to cut.</string>
    <string name="message_trim_too_short" formatted="false">Please select at least %d seconds to cut.</string>
    <string name="notification_channel_name">Default</string>
    <string name="notification_download_description">Should not taker longer than a few seconds.</string>
    <string name="notification_download_title">Download file…</string>
    <string name="pan_audio_hint">You may use this option to synchronize audio and video by adjusting audio to start a little earlier or later.</string>
    <string name="permission_rationale_upload">To pick and upload video from Gallery, storage permission is needed.</string>
    <string name="recorder_error_in_progress">To do this, please stop recording first.</string>
    <string name="recorder_error_maxed_out">You have already recorded for maximum duration.</string>
    <string name="recorder_error_no_clips">Please record your clip first to continue.</string>
    <string name="song_volume_label">song volume</string>
    <string name="video_volume_label">video volume</string>
    <string name="notification_channel_id">default</string>
    <string name="confirmation_delete_draft">Do you really want to permanently delete this draft clip? It cannot be undone.</string>
    <string name="title_activity_my_records">MyRecordsActivity</string>
    <string name="next">Next</string>
    <string name="yes">Yes</string>
    <string name="permission_explain_camera">Camera access is required to start a video conference.</string>
    <string name="permission_explain_gallery">Photos access is required to send images.</string>
    <string name="permission_explain_camera_mic">Permission required.</string>
    <string name="settings_camera">Please go to system settings to allow camera access. </string>
    <string name="settings_images">Please go to system settings to allow photos access. </string>
    <string name="settings_camera_mic">Please go to system settings to allow camera and images access.</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="policy">By Signing up you will be agree to our</string>
    <string name="r_coin_convert">R-Coin Convert</string>
    <string name="do_you_want_to_exit_n_this_app">Do You Want To Exit \n This App?</string>
    <string name="exit_this_app">Exit This App</string>
    <string name="tap_to_random_match">Tap to Random Match</string>
    <string name="report_this_user">Report This User</string>
    <string name="block_this_user">Block This User</string>
    <string name="report_user">Report User</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_bio_here">Enter your bio</string>
    <string name="incoming_call">Incoming call ...</string>
    <string name="redeem_your_coins">Redeem Your Coins</string>
    <string name="enter_coins_to_withdraw">Enter coins to Withdraw</string>
    <string name="submit">Submit</string>
    <string name="your_redeem_history">Your Redeem History</string>
    <string name="type_a_message">Type a Message...</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="status">Status :</string>
    <string name="close">CLOSE</string>
    <string name="my_tickets">My Tickets</string>
    <string name="complaint_or_suggestion">Complaint or Suggestion</string>
    <string name="typing_somethings">Typing Somethings...</string>
    <string name="contact">Contact</string>
    <string name="enter_your_mobile_number_or_email">Enter Your Mobile Number Or Email</string>
    <string name="attach_your_image_or_screenshot">Attach Your Image or Screenshot</string>
    <string name="browse">Browse</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="select_gender">Select Gender</string>
    <string name="female">Female</string>
    <string name="your_name">Your name</string>
    <string name="select_your_age">Select your age</string>
    <string name="my_posts">My Posts</string>
    <string name="select_filter">Select Filter</string>
    <string name="my_fans">My Fans</string>
    <string name="free_diamonds">Free Diamonds</string>
    <string name="method_1">Method 1</string>
    <string name="method_2">Method 2</string>
    <string name="your_refer_code">Your Refer Code:</string>
    <string name="enter_referral_code_here">Enter Referral code here</string>
    <string name="you_have_2_referrals">You have 2 referrals</string>
    <string name="go_live">Go Live</string>
    <string name="add_hashtags">Add Hashtags</string>
    <string name="done">Done</string>
    <string name="search_hashtags">#.. Search Hashtags</string>
    <string name="diamond_record">Diamond Record</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="income">Income</string>
    <string name="spending">Spending</string>
    <string name="no_one_joined">No one Joined</string>
    <string name="host_request">Host Request</string>
    <string name="_1_self_introduction">1.Self-introduction</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="Bio">Bio</string>
    <string name="_2_agency_code">2.Agency Code</string>
    <string name="if_you_have">(If you have)</string>
    <string name="_372341">372341</string>
    <string name="_3_upload_photos">3.Upload Photos</string>
    <string name="personal_photo">Personal Photo</string>
    <string name="_4_bank_details">4.Bank Details</string>
    <string name="enter_your_bank_details">Enter your bank details</string>
    <string name="live_ended">Live Ended</string>
    <string name="joined_users">Joined users</string>
    <string name="live_duration">Live duration</string>
    <string name="received_gifts">Received gifts</string>
    <string name="comments">Comments</string>
    <string name="increased_fans">Increased fans</string>
    <string name="rcoins">Rcoins</string>
    <string name="back_to_the_home">Back to the home</string>
    <string name="add_location">Add Location</string>
    <string name="search_area_or_city">Search Area or city</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="your_level">Your Level</string>
    <string name="live_streaming_record">Live Streaming Record</string>
    <string name="audio_streaming_record">Audio Streaming Record</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="notification">Notification</string>
    <string name="new_requests">New Requests</string>
    <string name="favourite_person_live">Favourite Person Live</string>
    <string name="like_comment_share">Like, Comment, Share</string>
    <string name="messages">Messages</string>
    <string name="manage_volume">Manage Volume</string>
    <string name="following">Following :</string>
    <string name="fans">Fans :</string>
    <string name="my_diamonds">My Diamonds</string>
    <string name="searching_for_new_friends">Searching for new Friends...</string>
    <string name="call_now">Call Now</string>
    <string name="match_again">Match again</string>
    <string name="go_meet_people_around_the_world">Go meet people around the world</string>
    <string name="record">Record</string>
    <string name="diamonds">Diamonds</string>
    <string name="outcome">Outcome</string>
    <string name="r_coins">R-Coins</string>
    <string name="flip">Flip</string>
    <string name="speed">Speed</string>
    <string name="filters">Filters</string>
    <string name="sticker">Sticker</string>
    <string name="timer">Timer</string>
    <string name="preview">Preview</string>
    <string name="search">Search</string>
    <string name="reseller_activty">Reseller Activty</string>
    <string name="room_passcode">Room passcode</string>
    <string name="enter_room_passcode">Enter Room passcode</string>
    <string name="lightening_contrast">Lightening Contrast</string>
    <string name="lightening_level">Lightening Level</string>
    <string name="smoothness_level">Smoothness Level</string>
    <string name="redness_level">Redness Level</string>
    <string name="sharpness_level">Sharpness Level</string>
    <string name="all_is_well_party">All is well party</string>
    <string name="private_room">Private Room</string>
    <string name="sure_you_want_to_stand_up">Sure you want to stand up ?</string>
</resources>