<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_sheet"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/lightening_contrast"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinnerLighteningContrast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/white"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lightening_level"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/seekBarLighteningLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="90"
            android:progressTint="@color/pink"
            android:thumbTint="@color/pink" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/smoothness_level"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/seekBarSmoothnessLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="80"
            android:progressTint="@color/pink"
            android:thumbTint="@color/pink" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/redness_level"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/seekBarRednessLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="50"
            android:progressTint="@color/pink"
            android:thumbTint="@color/pink" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sharpness_level"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/seekBarSharpnessLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="30"
            android:progressTint="@color/pink"
            android:thumbTint="@color/pink" />

    </LinearLayout>
</layout>
