<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_sheet_passcode"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/tvRoomName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/all_is_well_party"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:padding="2dp"
                android:src="@drawable/ic_close"
                app:tint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingHorizontal="@dimen/_2sdp"
            android:paddingVertical="@dimen/_2sdp">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_private"
                app:tint="#80D4D4D4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:fontFamily="@font/amidum"
                android:text="@string/private_room"
                android:textColor="#80D4D4D4"
                android:textSize="@dimen/_9sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layPasscode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/amidum"
                android:text="@string/room_passcode"
                android:textColor="@color/gray"
                android:textSize="@dimen/_13sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_start_audio_room_select_image"
                android:gravity="center">

                <EditText
                    android:id="@+id/etPasscode"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:fontFamily="@font/amidum"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_room_passcode"
                    android:inputType="number"
                    android:maxLength="6"
                    android:paddingVertical="15dp"
                    android:paddingStart="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="#80BCBCBC"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/bg_gotolive_gradiant"
            android:fontFamily="@font/abold"
            android:paddingHorizontal="40dp"
            android:paddingVertical="10dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="16dp" />

    </LinearLayout>

</layout>