<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/choiceLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@drawable/bg_bottom_sheet"
        android:orientation="vertical">
        <View
            android:layout_width="40dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_round_pink"
            android:backgroundTint="#2B2C3C" />

        <LinearLayout
            android:id="@+id/takeMic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginVertical="13dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/aregular"
                android:padding="5dp"
                android:text="@string/take_the_mic"
                android:textColor="@color/extra_light_grey"
                android:textSize="15sp" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_marginHorizontal="10dp"
            android:background="#191922" />


        <LinearLayout
            android:id="@+id/giveMic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="13dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvGiveRemove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/aregular"
                android:padding="5dp"
                android:text="@string/give_the_mic"
                android:textColor="@color/extra_light_grey"
                android:textSize="15sp" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_marginHorizontal="10dp"
            android:background="#191922" />


        <LinearLayout
            android:id="@+id/lockMic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="13dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvLock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/aregular"
                android:padding="5dp"
                android:text="@string/lock_the_mic"
                android:textColor="@color/extra_light_grey"
                android:textSize="15sp" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_marginHorizontal="10dp"
            android:background="#191922" />


        <LinearLayout
            android:id="@+id/muteMic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="13dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/aregular"
                android:padding="5dp"
                android:text="@string/mute_the_mic"
                android:textColor="@color/extra_light_grey"
                android:textSize="15sp" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_marginHorizontal="10dp"
            android:background="#191922" />


        <LinearLayout
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="13dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/aregular"
                android:padding="5dp"
                android:text="@string/cancel"
                android:textColor="@color/extra_light_grey"
                android:textSize="15sp" />


        </LinearLayout>

    </LinearLayout>
</layout>