<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgUser"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-50dp"
            android:background="@drawable/bg_10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/black_back"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="10dp">

                <TextView
                    android:id="@+id/tvText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:fontFamily="@font/amidum"
                    android:gravity="center"
                    android:text="@string/in_this_apk_nall_data_are_only_for_demo_purpose"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height=".3dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/blacklight" />

                <TextView
                    android:id="@+id/btncountinue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/pink"
                    android:fontFamily="@font/abold"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="15dp"
                    android:text="@string/accept"
                    android:textColor="@color/pink"
                    android:textSize="16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height=".3dp"
                    android:background="@color/blacklight" />

                <TextView
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/pink"
                    android:fontFamily="@font/abold"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="15dp"
                    android:text="@string/decline"
                    android:textColor="@color/white"
                    android:textSize="16dp" />
            </LinearLayout>
        </RelativeLayout>

        <com.example.rayzi.utils.UserProfileImageView
            android:id="@+id/imgUser"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center" />
    </RelativeLayout>
</layout>