<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            app:cardBackgroundColor="@color/black_back"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/black_back"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="10dp"
                android:paddingVertical="30dp">

                <TextView
                    android:id="@+id/tvText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amidum"
                    android:gravity="center"
                    android:text="@string/sure_you_want_to_stand_up"
                    android:textColor="@color/white"
                    android:textSize="16dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btnsure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_round_pink"
                        android:backgroundTint="@color/pink"
                        android:fontFamily="@font/abold"
                        android:gravity="center"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="10dp"
                        android:text="@string/sure"
                        android:textColor="@color/white"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/btncancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_round_pink"
                        android:backgroundTint="@color/pink"
                        android:fontFamily="@font/abold"
                        android:gravity="center"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="10dp"
                        android:text="@string/cancel"
                        android:textColor="@color/white"
                        android:textSize="14dp" />

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>